fix: collapse, input value, 'SelectScenario' to 'SelectNode'

--- a/src/styles/collapse.scss
+++ b/src/styles/collapse.scss
@@ -1,12 +1,12 @@
 .collapseWrapper {
   &[data-collapsed='true'] {
-    max-height: rem(500);
+    display: block;
     overflow: hidden;
     transition: max-height .5s ease;
   }
   
   &[data-collapsed='false'] {
-    max-height: 0;
+    display: none;
   }
 }
 
